Aeron and Kafka changes and improvemnts