@@ -15,17 +15,17 @@ package org.eclipse.datagrid.cluster.nodelibrary.types;
  */
 
 import org.eclipse.datagrid.cluster.nodelibrary.exceptions.NodelibraryException;
+import org.eclipse.datagrid.storage.distributed.types.AtomicFileStore;
 import org.eclipse.store.storage.types.Storage;
 import org.eclipse.store.storage.types.StorageConnection;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.LinkOption;
 import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
-import java.nio.file.StandardOpenOption;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -44,21 +44,13 @@ public interface FilesystemVolumeBackupBackend extends StorageBackupBackend
 	/** Creates a filesystem backup backend.
 	 *
 	 * @param backupVolumePath backup volume path
-	 * @param storedMessageInfoManagerCreator message-info manager factory
-	 * @param messageInfoParser message-info parser
 	 * @return filesystem backup backend
 	 */
 	static FilesystemVolumeBackupBackend New(
-        final Path backupVolumePath,
-        final StoredMessageInfoManager.Creator storedMessageInfoManagerCreator,
-        final MessageInfoParser messageInfoParser
+        final Path backupVolumePath
     )
     {
-        return new Default(
-            notNull(backupVolumePath),
-            notNull(storedMessageInfoManagerCreator),
-            notNull(messageInfoParser)
-        );
+        return new Default(notNull(backupVolumePath));
     }
 
     /** Implements the filesystem backup marker and copy protocol. */
@@ -68,23 +60,14 @@ public interface FilesystemVolumeBackupBackend extends StorageBackupBackend
 
         private final Path backupVolumePath;
         private final Path userUploadedStorageFolderPath;
-        private final StoredMessageInfoManager.Creator messageInfoManagerCreator;
-        private final MessageInfoParser messageInfoParser;
-
-        private Default(
-            final Path backupVolumePath,
-            final StoredMessageInfoManager.Creator storedMessageInfoManagerCreator,
-            final MessageInfoParser messageInfoParser
-        )
+        private Default(final Path backupVolumePath)
         {
             this.backupVolumePath = backupVolumePath;
-            this.userUploadedStorageFolderPath = backupVolumePath.resolve("user-uploaded-storage");
-            this.messageInfoManagerCreator = storedMessageInfoManagerCreator;
-            this.messageInfoParser = messageInfoParser;
+            this.userUploadedStorageFolderPath = backupVolumePath.resolve(BackupFileNames.USER_UPLOADED_STORAGE);
         }
 
         @Override
-        public Optional<MessageInfo> getMessageInfoFromPreviousBackup(final int skip) throws NodelibraryException
+        public Optional<ReplicationCursor> getCursorFromPreviousBackup(final int skip) throws NodelibraryException
         {
             LOG.trace("Getting backup metadata info of latest-{}", skip);
 
@@ -94,77 +77,60 @@ public interface FilesystemVolumeBackupBackend extends StorageBackupBackend
                 return Optional.empty();
             }
 
-            final String offsetFileContent;
-
             try
             {
-                final Path manifest = this.backupVolumePath.resolve(previousBackupMetadata.timestamp() + "/manifest");
-                offsetFileContent = Files.readString(
-                    Files.exists(manifest) ? manifest :
-                    this.backupVolumePath.resolve(previousBackupMetadata.timestamp() + "/offset"),
-                    StandardCharsets.UTF_8
-                );
+				final Path manifest = this.toBackupFolderPath(previousBackupMetadata).resolve(BackupFileNames.MANIFEST);
+				return Optional.of(ReplicationCursorStore.decode(Files.readAllBytes(manifest)));
             }
             catch (final IOException e)
             {
-                throw new NodelibraryException("Failed to read offset file", e);
+				throw new NodelibraryException("Failed to read backup manifest", e);
             }
-
-            return Optional.of(this.messageInfoParser.parseMessageInfo(offsetFileContent));
         }
 
         @Override
         public List<BackupMetadata> listBackups() throws NodelibraryException
         {
-            return this.listBackupVolumeFiles()
-                .stream()
-                .filter(f -> !f.equals(this.userUploadedStorageFolderPath.getFileName().toString()))
+			return this.listBackupVolumeFiles()
+				.stream()
+				.filter(f -> !f.equals(BackupFileNames.USER_UPLOADED_STORAGE))
+                .filter(this::isCompleteBackup)
                 .map(this::parseMetadata)
-                .collect(Collectors.toList());
+				.sorted(Comparator.comparingLong(BackupMetadata::timestamp))
+				.collect(Collectors.toList());
         }
 
         @Override
         public void deleteBackup(final BackupMetadata backup) throws NodelibraryException
         {
-            this.deleteDirectory(this.toBackupFolderPath(backup));
+            StorageFileOperations.deleteDirectory(this.toBackupFolderPath(backup));
         }
 
         @Override
         public void createAndUploadBackup(
             final StorageConnection connection,
-            final MessageInfo messageInfo,
+            final ReplicationCursor cursor,
             final BackupMetadata backup
         ) throws NodelibraryException
         {
             final Path backupRootPath = this.toBackupFolderPath(backup);
             final var fs = Storage.DefaultFileSystem();
 
-            connection.issueFullBackup(fs.ensureDirectory(backupRootPath.resolve("storage")));
-            // TODO: Hardcoded offset file name
-            try (
-                final var infoWriter = this.messageInfoManagerCreator.create(
-                    fs.ensureFile(backupRootPath.resolve("offset")).tryUseWriting()
-                )
-            )
-            {
-                infoWriter.set(messageInfo);
-            }
-            try
-            {
-                Files.write(backupRootPath.resolve("manifest"), MessageInfoCodec.serializeBytes(messageInfo),
-                    StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
-            }
-            catch (final IOException e)
-            {
-                throw new NodelibraryException("Failed to write backup replication manifest", e);
-            }
-            try
-            {
-                Files.createFile(backupRootPath.resolve("ready"));
-            }
-            catch (final IOException e)
-            {
-                throw new NodelibraryException("Failed to create ready file");
+			connection.issueFullBackup(fs.ensureDirectory(backupRootPath.resolve(BackupFileNames.STORAGE)));
+			try
+			{
+				StorageFileOperations.forceDirectory(backupRootPath.resolve(BackupFileNames.STORAGE));
+				final byte[] manifest = ReplicationCursorStore.encode(cursor);
+				AtomicFileStore.writeBytes(backupRootPath.resolve(BackupFileNames.MANIFEST), manifest);
+				/* The ready marker is the visibility commit.  It is written last
+				 * through the same forced replacement protocol so a crash cannot
+				 * publish a marker before the manifest and directory entry are
+				 * durable. */
+				AtomicFileStore.write(backupRootPath.resolve(BackupFileNames.READY), channel -> { });
+			}
+			catch (final IOException e)
+			{
+                throw new NodelibraryException("Failed to publish backup replication manifest", e);
             }
         }
 
@@ -173,7 +139,7 @@ public interface FilesystemVolumeBackupBackend extends StorageBackupBackend
             throws NodelibraryException
         {
             final Path backupRootPath = this.toBackupFolderPath(backup);
-            this.copyDirectory(backupRootPath, storageDestinationParentPath);
+			this.restoreDirectory(backupRootPath.resolve(BackupFileNames.STORAGE), storageDestinationParentPath);
         }
 
         @Override
@@ -187,13 +153,13 @@ public interface FilesystemVolumeBackupBackend extends StorageBackupBackend
         @Override
         public void downloadUserUploadedStorage(final Path storageDestinationParentPath) throws NodelibraryException
         {
-            this.copyDirectory(this.userUploadedStorageFolderPath, storageDestinationParentPath);
+			this.restoreDirectory(this.userUploadedStorageFolderPath, storageDestinationParentPath);
         }
 
         @Override
         public void deleteUserUploadedStorage() throws NodelibraryException
         {
-            this.deleteDirectory(this.userUploadedStorageFolderPath);
+            StorageFileOperations.deleteDirectory(this.userUploadedStorageFolderPath);
         }
 
         @Override
@@ -225,30 +191,78 @@ public interface FilesystemVolumeBackupBackend extends StorageBackupBackend
             {
                 timestamp = Long.parseLong(backupName);
             }
-            catch (final NumberFormatException e)
-            {
-                throw new NodelibraryException(
-                    "Failed to parse backup timestamp for backup " + this.backupVolumePath.resolve(folderName)
-                );
+			catch (final NumberFormatException e)
+			{
+				throw new NodelibraryException(
+					"Failed to parse backup timestamp for backup " + this.backupVolumePath.resolve(folderName), e
+				);
             }
             return new BackupMetadata(timestamp, isManual);
         }
 
-		private void deleteDirectory(final Path path) throws NodelibraryException
+        /**
+         * A backup directory is visible only after the final ready marker has
+         * been forced.  Requiring the storage directory and manifest as well
+         * prevents an interrupted copy from being selected as the latest
+         * recoverable backup.
+         */
+		private boolean isCompleteBackup(final String folderName)
 		{
-			StorageFileOperations.deleteDirectory(path);
-		}
+			final Path root = this.backupVolumePath.resolve(folderName);
+			return Files.isDirectory(root, LinkOption.NOFOLLOW_LINKS)
+			&& Files.isDirectory(root.resolve(BackupFileNames.STORAGE), LinkOption.NOFOLLOW_LINKS)
+			&& Files.isRegularFile(root.resolve(BackupFileNames.MANIFEST), LinkOption.NOFOLLOW_LINKS)
+			&& Files.isRegularFile(root.resolve(BackupFileNames.READY), LinkOption.NOFOLLOW_LINKS);
+        }
 
-        private void copyDirectory(final Path sourceDir, final Path destinationDir)
-        {
-            try (final var storageFiles = Files.walk(sourceDir))
-            {
-                storageFiles.filter(p -> !p.equals(sourceDir)).forEach(f ->
-                {
-                    try
-                    {
-                        final var destinationFile = destinationDir.resolve(sourceDir.relativize(f));
-                        Files.copy(f, destinationFile, StandardCopyOption.REPLACE_EXISTING);
+		private void copyDirectory(final Path sourceDir, final Path destinationDir)
+		{
+			try
+			{
+				StorageFileOperations.ensureNoSymbolicLinks(destinationDir);
+				if (!Files.isDirectory(sourceDir, LinkOption.NOFOLLOW_LINKS))
+				{
+					throw new NodelibraryException("Backup source is not a directory: " + sourceDir);
+				}
+				if (Files.exists(destinationDir, LinkOption.NOFOLLOW_LINKS))
+				{
+					throw new NodelibraryException("Backup destination already contains storage: " + destinationDir);
+				}
+				Files.createDirectories(destinationDir);
+				StorageFileOperations.ensureNoSymbolicLinks(destinationDir);
+			}
+			catch (final IOException e)
+			{
+				throw new NodelibraryException("Failed to create backup destination " + destinationDir, e);
+			}
+			try (final var storageFiles = Files.walk(sourceDir))
+			{
+				storageFiles.forEach(f ->
+				{
+					if (f.equals(sourceDir)) return;
+					try
+					{
+						final var destinationFile = destinationDir.resolve(sourceDir.relativize(f));
+						StorageFileOperations.ensureNoSymbolicLinks(destinationFile);
+						if (Files.isSymbolicLink(f))
+						{
+							throw new IOException("Backup source contains a symbolic link: " + f);
+						}
+						if (Files.isDirectory(f, LinkOption.NOFOLLOW_LINKS))
+						{
+							Files.createDirectories(destinationFile);
+							StorageFileOperations.ensureNoSymbolicLinks(destinationFile);
+						}
+						else if (Files.isRegularFile(f, LinkOption.NOFOLLOW_LINKS))
+						{
+							Files.createDirectories(destinationFile.getParent());
+							StorageFileOperations.ensureNoSymbolicLinks(destinationFile.getParent());
+							Files.copy(f, destinationFile, LinkOption.NOFOLLOW_LINKS);
+						}
+						else
+						{
+							throw new IOException("Unsupported backup entry: " + f);
+						}
                     }
                     catch (final IOException e)
                     {
@@ -256,22 +270,66 @@ public interface FilesystemVolumeBackupBackend extends StorageBackupBackend
                     }
                 });
             }
-            catch (final IOException e)
-            {
-                throw new NodelibraryException("Failed to walk files at " + sourceDir, e);
-            }
-        }
+			catch (final IOException e)
+			{
+				throw new NodelibraryException("Failed to walk files at " + sourceDir, e);
+			}
+		}
 
-        private List<String> listBackupVolumeFiles() throws NodelibraryException
-        {
-            try (final var listStream = Files.list(this.backupVolumePath))
+		private void restoreDirectory(final Path sourceDir, final Path destinationParent)
+		{
+			try
+			{
+				StorageFileOperations.ensureNoSymbolicLinks(destinationParent);
+				Files.createDirectories(destinationParent);
+				StorageFileOperations.ensureNoSymbolicLinks(destinationParent);
+			}
+			catch (final IOException failure)
+			{
+				throw new NodelibraryException("Failed to create backup destination " + destinationParent, failure);
+			}
+			final Path temporary;
+			try
+			{
+				temporary = Files.createTempDirectory(destinationParent, ".backup-restore-",
+					StorageFileOperations.ownerOnlyDirectoryAttributes());
+			}
+			catch (final IOException failure)
+			{
+				throw new NodelibraryException("Failed to create temporary backup destination", failure);
+			}
+			Throwable primaryFailure = null;
+			try
+			{
+				this.copyDirectory(sourceDir, temporary.resolve(BackupFileNames.STORAGE));
+				StorageFileOperations.installStorage(temporary.resolve(BackupFileNames.STORAGE),
+					destinationParent.resolve(BackupFileNames.STORAGE));
+			}
+			catch (final RuntimeException | Error failure)
+			{
+				primaryFailure = failure;
+				throw failure;
+			}
+			finally
+			{
+				StorageFileOperations.cleanup(temporary, primaryFailure);
+			}
+		}
+
+		private List<String> listBackupVolumeFiles() throws NodelibraryException
+		{
+			if (Files.notExists(this.backupVolumePath, LinkOption.NOFOLLOW_LINKS))
+			{
+				return List.of();
+			}
+			try (final var listStream = Files.list(this.backupVolumePath))
             {
-                return listStream.map(p -> p.getFileName().toString()).collect(Collectors.toList());
+                return listStream.map(p -> p.getFileName().toString()).sorted().collect(Collectors.toList());
             }
-            catch (final IOException e)
-            {
-                throw new NodelibraryException("Failed to iterate backup files at " + this.backupVolumePath);
-            }
+			catch (final IOException e)
+			{
+				throw new NodelibraryException("Failed to iterate backup files at " + this.backupVolumePath, e);
+			}
         }
     }
 }
